# RVZN-EQ

./: .gitignore  CMakeLists.txt  RVZN EQ.jucer  RVZN V1 EQUALIZER.jucer
.github/workflows/: build.yml
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/RVZN EQ.xcodeproj/: project.pbxproj
Builds/MacOSX/RVZN V1 EQUALIZER.xcodeproj/: project.pbxproj
Builds/VisualStudio2026/: RVZN V1 EQUALIZER.sln  RVZN V1 EQUALIZER_SharedCode.vcxproj  RVZN V1 EQUALIZER_SharedCode.vcxproj.filters  RVZN V1 EQUALIZER_StandalonePlugin.vcxproj  RVZN V1 EQUALIZER_VST3.vcxproj  RVZN V1 EQUALIZER_VST3ManifestHelper.vcxproj  resources.rc
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h  include_juce_opengl.cpp  include_juce_opengl.mm
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/License/: DeviceId.cpp  DeviceId.h  LicenseConfig.h  LicenseGate.cpp  LicenseGate.h  LicenseManager.cpp  LicenseManager.h  SecureStore.cpp  SecureStore.h
Source/LookAndFeel/: RvznColours.h  RvznLookAndFeel.h  RvznSettings.h
Source/UI/: MeterComponent.h
